--- a/src/checkout/package.json
+++ b/src/checkout/package.json
@@ -29,6 +29,9 @@
     "@nestjs/terminus": "^9.2.2",
     "@opentelemetry/auto-instrumentations-node": "^0.35.0",
     "@opentelemetry/exporter-trace-otlp-grpc": "^0.34.0",
+    "@opentelemetry/id-generator-aws-xray": "^1.1.1",
+    "@opentelemetry/instrumentation-aws-sdk": "^0.34.0",
+    "@opentelemetry/instrumentation-http": "^0.37.0",
     "@opentelemetry/resource-detector-aws": "^1.2.1",
     "@opentelemetry/sdk-node": "^0.34.0",
     "@willsoto/nestjs-prometheus": "^4.7.0",
